[package]
name = "tab2space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] } # For robust CLI argument parsing
regex = "1.10" # For efficient pattern matching (spaces, tabs)